Fix build and test warnings and errors